# walking-with-claude

./: .gitignore  CLAUDE.md  LICENSE  README.md  STORY.md  pyproject.toml
walking_with_claude/: __init__.py  __main__.py  daemon.py  hook.py  server.py
